[package]
name = "direct-printing"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
log = "0.4.26"
poem = "3.1.7"
poem-openapi = { version = "5.1.8", features = ["sonic-rs"] }
pretty_env_logger = "0.5.0"
tempfile = "3.18.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
winprint = "0.2.0"

[features]
default = ["with-ui"]
with-ui = ["poem-openapi/swagger-ui"]
